force-app/main/default/objects/MUSW__Valuation_Item_Template__c/MUSW__Valuation_Item_Template__c.object-meta.xml
<CustomObject>
    <label>Valuation Item Template</label>
    <nameField>
        <label>Valuation Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Valuation Item Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>