force-app/main/default/objects/MUSW__Valuation_Item_Template__c/fields/MUSW__Category__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Category__c</fullName>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>