force-app/main/default/objects/MUSW__Valuation_Item_Template__c/fields/MUSW__Default_Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_Construction_Type__c</fullName>
    <label>Default Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Construction_Types</valueSetName>
    </valueSet>
</CustomField>