force-app/main/default/objects/MUSW__Valuation_Item_Template__c/fields/MUSW__Default_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_Unit_Count__c</fullName>
    <label>Default Unit Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>