force-app/main/default/objects/MUSW__Valuation_Item_Template__c/fields/MUSW__Default_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_Unit_of_Measure__c</fullName>
    <label>Default Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Units_of_Measure</valueSetName>
    </valueSet>
</CustomField>