force-app/main/default/objects/MUSW__Valuation_Item_Template__c/fields/MUSW__Template_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Template_Object_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creation Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Valuation Item Templates</relationshipLabel>
    <relationshipName>Valuation_Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>