force-app/main/default/objects/MUSW__Valuation_Item_Template__c/fields/MUSW__Valuation_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Valuation_Amount__c</fullName>
    <label>Valuation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>