force-app/main/default/objects/MUSW__Valuation_Item_Template__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Description__c</columns>
    <columns>MUSW__Valuation_Calculation_Type__c</columns>
    <columns>MUSW__Object_Types__c</columns>
    <columns>MUSW__Object_Record_Types__c</columns>
    <columns>MUSW__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>